[package]
name = "dracula_game"
version = "0.1.0"
edition = "2021"
[workspace]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]
[[bin]]
name = "dracula_game_bin"
path = "src/bin/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.13.2"
bevy_entitiles = "0.7.0"
bevy_talks = "0.5.0"
wasm-bindgen = "0.2.92"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] } # Add the types you want support for
egui_extras = { version = "0.27.2", features = ["image","all_loaders","http"] }
iyes_progress = { version = "0.11.0",features = ["assets"] }
random_name_generator = "0.3.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.13.2"}
bevy_egui  = { version = "0.26.0", features = ["default_fonts","render"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.13.2",features = ["dynamic_linking"] }
bevy_egui  = { version = "0.26.0", features = ["default_fonts","render"], default-features = true }


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
